--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
 
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./src/main.js"></script>
   </body>
 </html>
