added bar elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css
   </head>
   <body>
-
+    <h1 class="header">Movie Search</h1>
+    <button id="searchButton">Search</button>
+    <input id="searchBar" placeholder="input movie name..." type="text"></input>
+    <select id="selectBar">
+      <option></option>
+      <option></option>
+      <option></option>
+      <option></option>
+      <option></option>
+    </select>
 
 
 
