added bootstrap theme

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <title>Branch Practice</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-X9JiR5BtXUXiV6R3XuMyVGefFyy+18PHpBwaMfteb/vd2RrK6Gt4KPenkQyWLxCC" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="header">Movie Search</h1>
+    <h1 class="header col-md-6">Movie Search</h1><br>
     <button id="searchButton">Search</button>
-    <input id="searchBar" placeholder="input movie name..." type="text"></input>
-    <select id="selectBar">
+    <input id="searchBar" class="col-md-2" placeholder="input movie name..." type="text"></input>
+    <select id="selectBar" class="col-md-2">
       <option>Horror</option>
       <option>Romance</option>
-      <option>Thriller</option>  
+      <option>Thriller</option>
       <option>Drama</option>
       <option>Comedy</option>
     </select>
