--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Branch Practice</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
+    <h1 class="header">Movie Search</h1>
+    <button id="searchButton">Search</button>
+    <input id="searchBar" placeholder="input movie name..." type="text"></input>
+    <select id="selectBar">
+      <option>Horror</option>
+      <option>Romance</option>
+      <option>Thriller</option>
+      <option>Drama</option>
+      <option>Comedy</option>
+    </select>
 
 
 
-    <script type="text/javascript" src"./src/main.js">
-
-    </script>
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./src/main.js"></script>
   </body>
 </html>
