--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Branch Practice</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-X9JiR5BtXUXiV6R3XuMyVGefFyy+18PHpBwaMfteb/vd2RrK6Gt4KPenkQyWLxCC" crossorigin="anonymous">
+
   </head>
   <body>
     <h1 class="header col-md-6">Movie Search</h1><br>
@@ -13,11 +17,17 @@
     <select id="selectBar" class="col-md-2">
     </select>
 
-    <img id="movieImage" src="http://lorempixel.com/400/200" />
+
+    <img id="movieImage" src="#" />
     <div id="titleHolder"></div>
 
-
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="./src/main.js">
+
+    </script>
+
     <script type="text/javascript" src="./src/main.js"></script>
+
   </body>
 </html>
