--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <input id="searchBar" class="col-md-2" placeholder="input movie name..." type="text"></input>
     <select id="selectBar" class="col-md-2">
     </select>
+    <div class="row">
+      <div class="images">
 
-    <img id="movieImage" src="http://lorempixel.com/400/200" />
+      </div>
+    </div>
     <div id="titleHolder"></div>
 
 
